--- a/index.html
+++ b/index.html
@@ -273,5 +273,8 @@
             </div>
         </section>
     </div>
+    <footer>
+        <p>© Copyright 2024</p>
+    </footer>
 </body>
 </html>
